--- a/angular.html
+++ b/angular.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="Clock">
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script charset="utf-8" src="public/js/angular.min.js"></script>
+    <script charset="utf-8" src="public/js/angular.js"></script>
+
 </head>
 <body>
-<input ng-model="name" type="text" placeholder="Your name">
-
-<h1>Hello {{ name }}</h1>
+<div ng-controller="MyController">
+    <h1>Hello {{ clock.now }}!</h1>
+</div>
+<script type="text/javascript">
+    angular.module('Clock', []).controller('MyController', function ($scope) {
+        $scope.clock = {
+            now: new Date()
+        };
+        var updateClock = function () {
+            $scope.clock.now = new Date()
+        };
+        setInterval(function () {
+            $scope.$apply(updateClock);
+        }, 1000);
+        updateClock();
+    });
+</script>
 </body>
 </html>
