--- a/angular.html
+++ b/angular.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script charset="utf-8" src="public/js/angular.js"></script>
+    <script charset="utf-8" src="public/js/angular.min.js"></script>
 
 </head>
 <body>
