--- a/angular.html
+++ b/angular.html
@@ -7,22 +7,13 @@
     <script src="public/js/jquery-2.1.4.min.js"></script>
 </head>
 <div ng-app="myApp" ng-controller="CityController">
-    <select ng-model="city"
-            ng-options="city.name for city in cities">
-        <option value="">Choose City</option>
-    </select>
-    Best City: {{ city.name }}
+   <input type="checkbox" ng-model="is">
+    <div ng-show="is">haiofdoiwef</div>
 </div>
 <script>
 angular.module('myApp',[])
 .controller('CityController',function($scope) {
-$scope.cities = [
-{name: 'Seattle'},
-{name: 'San Francisco'},
-{name: 'Chicago'},
-{name: 'New York'},
-{name: 'Boston'}
-];
+
 });
 </script>
 </body>
