--- a/public/admin/adminViews/post.html
+++ b/public/admin/adminViews/post.html
@@ -58,7 +58,7 @@
 </div>
 <script>
     $("div#uploadImg").dropzone({
-        url: "/upload/img",
+        url: "http://up.imgapi.com/",
         addRemoveLinks: true,
         acceptedFiles: 'image/*',
         previewsContainer: '.dropzone-previews',
@@ -73,11 +73,15 @@
             var dz = this;
             angular.imgs=[];
             this.on('success', function (file, info) {
-                angular.imgs.push({id:(file.name + file.uploadtime),value:info});
+                info=JSON.parse(info);
+                angular.imgs.push({id:info.s_url,value:{
+                    "sourceImg": info.s_url,
+                    "thumbnailImg":info.t_url
+                }});
             });
             this.on('removedfile', function (file) {
                 for(var i=0;i<angular.imgs.length;i++){
-                    if( angular.imgs[i].id==(file.name + file.uploadtime)){
+                    if( angular.imgs[i].id==info.s_url){
                         angular.imgs.splice(i, 1);
                     }
                 }
@@ -85,6 +89,13 @@
             });
             this.on('maxfilesexceeded', function (file) {
                 dz.removeFile(file);
+            });
+            this.on("sending", function(file, xhr, formData) {
+                // Will send the filesize along with the file as POST data.
+                formData.append("Token", "88f0c33e127164112ae68aa79ea7745091f54f7a:Y2FCUWJoN2RYYUFVNl9oUG1QM0FqN3I3X0U0PQ==:eyJkZWFkbGluZSI6MTQ1OTg2MDEyOSwiYWN0aW9uIjoiZ2V0IiwidWlkIjoiNTYxODc1IiwiYWlkIjoiMTIxMzQwNiIsImZyb20iOiJmaWxlIn0=");
+                formData.append("aid",1213406);
+                formData.append("deadline",new Date().getMilliseconds()+60);
+                formData.append("form","file");
             });
             $(".close").on('click', function () {
                 dz.removeAllFiles();
